<resources>
    <string name="app_name" translatable="false">SBL</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_edit">Edit</string>
    <string name="title_setting">Setting</string>
    <string name="set_alarm">Set alarm</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="err_null_gps">Failed to retrieve location information.</string>
    <string name="err_no_bus_stop">There is no bus</string>
    <string name="err_no_bus_nearby">There is no bus stop nearby</string>
    <string name="err_api_server">API Server Error</string>
    <string name="diag_grant_gps_title">Why need location permissions?</string>
    <string name="diag_grant_gps_msg">Required for searching for nearby bus stops.</string>
    <string name="ok">Ok</string>
    <string name="minutes">Min</string>
    <string name="set">Set</string>
    <string name="second">Sec</string>
    <string name="cancel">Cancel</string>
    <string name="alarm_title">alarm title</string>
    <string name="alarm_description">alarm description</string>
    <string name="save">Save</string>
    <string name="alarm_cancel">Alarm is canceled</string>
    <string name="alarm_set">Alarm is set</string>
</resources>